# shell-sorter

./: .gitignore  .yamllint.yaml  .yamllint.yml  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  conftest.py  esphome-esp32cam1.yaml  esphome-shell-sorter.yaml  justfile  plan.md  pyproject.toml  secrets.sops.yaml  system_design.mermaid
.github/: CONTRIBUTING.md
.github/workflows/: rust_test.yml
shell_sorter/: __init__.py  __main__.py  app.py  camera_manager.py  config.py  debug_manager.py  esphome_monitor.py  forms.py  hardware_controller.py  machine_controller.py  middleware.py  ml_trainer.py  shell.py  status.py
shell_sorter/static/: config.js  manifest.webmanifest  ml_training.js  region_selection.js  script.js  shell_edit.js  style.css
shell_sorter/templates/: config.html  dashboard.html  ml_training.html  region_selection.html  shell_edit.html  tagging.html
src/: camera_manager.rs  config.rs  constants.rs  controller_monitor.rs  error.rs  integration_tests.rs  lib.rs  main.rs  ml_training.rs  protocol.rs  server.rs  shell_data.rs  usb_camera_controller.rs
src/web_server/: all_cameras.rs  config.rs  controller.rs  middleware.rs  mod.rs  prelude.rs
static/: script.js
templates/: config.html  dashboard.html  shell_edit.html  tagging.html
templates/static/: script.js  style.css
tests/: __init__.py  integration_tests.rs  test_api.py  test_camera_manager.py  test_config.py
