[package]
name = "shell-sorter"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.14.0", features = ["serde_json"] }
askama_web = { version = "0.14.4", features = ["axum-0.8"] }
axum = { version = "0.8.4", features = [
    "macros",
    "json",
    "tracing",
    "ws",
    "http2",
    "multipart",
] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
dirs = "6.0.0"
image = "0.25.6"
reqwest = { version = "0.12.22", features = ["json", "stream", "trust-dns"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.14.0"
thiserror = "2.0.12"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
nokhwa = { version = "0.10.9", features = ["input-native", "output-threaded"] }
regex = "1.11.1"
async-stream = "0.3"
futures-util = "0.3"

[dev-dependencies]
rand = "0.9.1"
tokio-test = "0.4.4"
tempfile = "3.8.1"
