[package]
name = "shell-sorter"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.15.4", features = ["serde_json"] }
askama_web = { version = "0.15.1", features = ["axum-0.8"] }
axum = { version = "0.8.8", features = [
    "macros",
    "json",
    "tracing",
    "ws",
    "http2",
    "multipart",
] }
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.57", features = ["derive"] }
dirs = "6.0.0"
image = "0.25.9"
reqwest = { version = "0.12.28", features = ["json", "stream", "trust-dns"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.16.1"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
nokhwa = { version = "0.10.10", features = ["input-native", "output-threaded"] }
regex = "1.12.3"
async-stream = "0.3"
futures-util = "0.3"

[dev-dependencies]
rand = "0.10.0"
tokio-test = "0.4.5"
tempfile = "3.24.0"
