[project]
name = "shell-sorter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clap>=0.7",
    "fastapi>=0.115.14",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.32.1",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "opencv-python>=4.10.0",
    "aiohttp>=3.10.0",
]

[project.scripts]
shell-sorter = "shell_sorter.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
