[project]
name = "shell-sorter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clap>=0.7",
    "fastapi>=0.115.14",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "uvicorn[standard]>=0.32.1",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "aiohttp>=3.10.0",
    "pillow>=10.0.0",
    "piexif>=1.1.3",
    "opencv-contrib-python-headless>=4.11.0.86",
    "websockets>=15.0.1",
]

[project.scripts]
shell-sorter = "shell_sorter.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pylint]
max-line-length = 120
load-plugins = ["pylint_pydantic"]

[tool.pylint.messages_control]
disable = [
    "W0718", # broad-exception-caught
]

[tool.pylint.typecheck]
# Ignore missing members for cv2 module (OpenCV has dynamic attributes)
ignored-modules = ["cv2"]

[dependency-groups]
dev = [
    "opencv-stubs[opencv]>=0.0.12",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",
    "pylint-pytest>=1.1.8",
    "pylint>=3.3.7",
    "pylint-pydantic>=0.3.5",
]
